<resources>
    <string name="app_name">Weather Application</string>
    <string name="weather">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_setup">Weather</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="today_txt">Today</string>
    <string name="next_forecast_txt">For 7 Days</string>
    <string name="weather_details_txt">Weather Details</string>
    <string name="pressure_txt">Pressure</string>
    <string name="wind_txt">Wind</string>
    <string name="cloud_txt">Cloud</string>
    <string name="u_v_txt">U V</string>
    <string name="visibility_txt">Visibility</string>
    <string name="humidity_txt">Humidity</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="language">Language</string>
    <string name="English">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="Kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="add_fav_mgs">Do you want to save this location to favorites?</string>
    <string name="save_btn">Save</string>
    <string name="no_internet_msg">No Internet</string>
    <string name="confirm_save_txt">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="locationInMap">locationInMap</string>
    <string name="locationSearchInMap">locationSearchInMap</string>
    <string name="selected_location">Selected Location</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="exampleDate">ex:10/4/2023</string>
    <string name="time">Time</string>
    <string name="exampleTime">ex: 05:30</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="to">To</string>
    <string name="city_name">City Name</string>
    <string name="time_alert">12:00Am</string>
    <string name="at">At</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="notification_txt">Notification</string>
    <string name="alarm_txt">Alarm</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="milis">Miles/Hour</string>
    <string name="meter">Meter/Sec</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="no_alarm">There is No Alarm</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alert">Alert</string>
    <string name="setting">Setting</string>
    <string name="features">Features</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="AWTD">Are you Want to delete it ?</string>
    <string name="yes">Yes</string>
    <string name="deleted">Deleted</string>
    <string name="you_are_offline">You are offline. Some functionality may be unavailable.</string>
    <string name="the_weather_is">The Weather is</string>
    <string name="ther_is_no_alarm">There is No Alarm</string>
    <string name="channel_name">Channel Nmae</string>
    <string name="search">Search</string>
    <string name="dismiss_btn_txt">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>