<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_favorite_24"
        />

    <item
        android:id="@+id/alertFragment"
        android:title="@string/alert"
        android:icon="@drawable/baseline_add_alert_24"
        />

    <item
        android:id="@+id/settingFragment"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"
        />

</menu>