<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/custom_grey"
    tools:context=".alert.view.AddNewAlertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/selected_location"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/setAlertLocBtn"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setAlertLocBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:background="@drawable/baseline_add_location_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvSelectedAlertLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/text_border"
            android:fontFamily="@font/merriweathersans_bold"
            android:hint="@string/selected_location"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/selected_location"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedAlertLoc">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweathersans_bold"
                    android:padding="4dp"
                    android:text="@string/StartDate"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAlertStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/merriweathersans_bold"
                    android:hint="@string/exampleDate"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweathersans_bold"
                    android:padding="4dp"
                    android:text="@string/EndDate"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAlertEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/merriweathersans_bold"
                    android:hint="@string/exampleDate"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/merriweathersans_bold"
                android:padding="4dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAlertTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/text_border"
                android:fontFamily="@font/merriweathersans_bold"
                android:hint="@string/exampleTime"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/alertSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <Button
            android:id="@+id/alertCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"
            android:fontFamily="@font/merriweathersans_bold"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/alertSubmitBtn"
            app:layout_constraintEnd_toStartOf="@+id/alertSubmitBtn"
            app:layout_constraintTop_toTopOf="@+id/alertSubmitBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>